# MatrixLib

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
include/matrixlib/: math.hpp  matrix.hpp  utility.hpp
src/: matrix.cpp  utility.cpp
tests/: test_arithmetic.cpp  test_main.cpp  test_matrix_creation.cpp  test_pivot_tools.cpp  test_row_operations.cpp  test_special_matrices.cpp  test_transformations.cpp  test_utility.cpp
